--- a/app.css
+++ b/app.css
@@ -96,4 +96,12 @@ body{
     border: none;
     border-radius: 99px;
     color: white;
+    cursor: pointer;
+}
+.dont-have-an-account{
+    position: relative;
+    top: 10px;
+    right: 20px;
+    font-size: 12px;
+    font-weight: normal;
 }
